<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Account Type :"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rgaccounttype"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rblearner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:checked="true"
                android:background="@drawable/custom_inputfield"
                android:drawableLeft="@drawable/personsearch"
                android:text="Learner" />

            <RadioButton
                android:id="@+id/rbprofessor"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_inputfield"
                android:drawableLeft="@drawable/person"
                android:text="Professor" />



        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Full Name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etfullname"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_inputfield"
            android:drawableLeft="@drawable/person"
            android:drawablePadding="12dp"
            android:hint="Full name..."
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_inputfield"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="12dp"
            android:hint="Email..."
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_inputfield"
            android:drawableLeft="@drawable/person"
            android:drawablePadding="12dp"
            android:hint="Username..."
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_inputfield"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="12dp"
            android:hint="Password..."
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Confirm Password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etcpassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_inputfield"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="12dp"
            android:hint="Confirm Password..."
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_btn"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="end"
                android:text="Already have an account?"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvsignin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="2"
                android:text="Login!"
                android:textColor="@color/teal_200"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>