...
                    android:layout_weight="5"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:text="Don't have an account?"/>
                <TextView
                    android:id="@+id/tvsignup"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    android:text="Sign Up Now!"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
